# data-reconstructio-from-tiles

./: .gitignore  .pre-commit-config.yaml  README.md  init-script.sh  main.py  pyproject.toml  requirements.txt
init-scripts/: full-generation.sh  vscode-python.sh
notebooks/: build_population.py  creer_base_individus.py  experimentation_gfy.py  full_process.py  fusion_filo_ban.py  refine_and_create_hh_data.py  tests_refine_filo.py  traitements_un_carreau_modularise.py
pgms/: BAN_tele_dezip.py  FILO_carreaux.py  __init__.py  creer_base_individus.py  fun_fusionner_ban_filo.py  fun_generer_base_indiv.py
popdbgen/: __init__.py  build_population.py  download_ban.py  download_filo.py  fun_fusionner_ban_filo.py  fun_generer_base_indiv.py  households_gen.py  households_tile_generation.py  merge_filo_ban.py  metadata.py  population_gen.py  utils.py
scripts/: creer_base_individus.py  download_BAN.py  download_FILO.py  fusion_filo_ban.py  generate_database.py  main.py
