[project]
name = "DummyPopDatabase"
version = "0.0.1"
description = "Dummy population database"
readme = "README.md"
authors = [
    { name = "Julien Jamme", email = "julien.jamme@insee.fr" },
    { name = "Gaspard Ferey", email = "gaspard.ferey@insee.fr" }
]
license = { text = "MIT" }
dependencies = [
    "py7zr",
    "types-requests",
    "pandas-stubs",
    "types-geopandas",
    "PyYAML"
]

[tool.setuptools]
packages = ["popdbgen"]

[tool.ruff]
line-length = 120
indent-width = 4
extend-include = ["*.ipynb"]
extend-exclude = ["notebooks/*"]
target-version = "py312"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
#ignore  = ["B024"]

[tool.ruff.format]
indent-style = "space"
